# app2

./: .dockerignore  .env.example  .env.migration  .env.production  .eslintrc.json  .gitattribute  .gitignore  .replit  ACCEPTANCE_CRITERIA.md  ANDROID_API_TEST_REPORT.md  ANDROID_FULL_AUDIT_REPORT.md  ANDROID_TEST_REPORT.md  API_PERFORMANCE_REPORT.md  BUILD_REMOTE.md  Dockerfile  EMERGENCY_RECOVERY_ANALYSIS.md  OFFLINE_FIRST_SYSTEM.md  PROJECT_TECHNICAL_STATUS.md  README.md  SECURITY_KEY_ROTATION.md  SERVER_AUDIT_REPORT.md  SYSTEM_AUDIT_REPORT.md  SYSTEM_INTEGRITY_AUDIT.md  TECHNICAL_STANDARDS.md  agent_bridge.py  apk.sh  audit_scan.json  axion-release.keystore  build-apk-on-server.sh  build-remote-auto.sh  build-remote-key.sh  build-remote.sh  build.sh  capacitor.config.json  capacitor.config.ts  check-database.ts  check-local-database.ts  check-supabase-tables.ts  cookies.txt  create-all-tables-complete.ts  (+46 more)
.agents/: agent_assets_metadata.toml
.transfer-tmp/: manifest-v20260424-022758.txt
.work/: ACCEPTANCE_CRITERIA.md  APK_BUILD_COMPLETE.md  BLOCKERS.md  COMPLETION_STATUS.md  CURRENT_STATUS.md  FINAL_STATUS.md  FINAL_SUMMARY.md  NOTES.md  PHASE_2_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_4_COMPLETE.md  PHASE_4_PROGRESS.md  PHASE_5_COMPLETE.md  PHASE_6_COMPLETE.md  PHASE_7_STATUS.md  QUESTIONS.md  README.md  REMOTE_BUILD_STATUS.md  ROADMAP.md
android/: build.gradle  capacitor.settings.gradle  gradle.properties  gradlew  variables.gradle
api/: index.ts
app2/: .env.example  .env.production  .replit  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMMANDS.md  DEPLOY_FINAL.sh  (+33 more)
(+2580 files in other folders)
