[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "chromadb>=1.4.0",
    "google-generativeai>=0.8.6",
    "numpy>=2.4.0",
    "openai>=2.14.0",
    "opencv-python-headless>=4.13.0.90",
    "paramiko>=4.0.0",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "ruamel-yaml>=0.19.1",
    "tiktoken>=0.12.0",
]
